...
            
        case "AudioNotesViewController":
            leftItem = UIBarButtonItem(title: "< Main", style: .Plain, target: nil, action: #selector(UIViewController.dissmisViewController))
            rightItem = UIBarButtonItem(title: "Add Record >", style: .Plain, target: nil, action: #selector(UIViewController.goToAudioRecordView))
            
        default:
            leftItem = UIBarButtonItem(title: "< Back", style: .Plain, target: nil, action: #selector(UIViewController.dissmisViewController))
        }
        
        if horizontalClass == .Regular && verticalCass == .Regular {
            fontSize = 30
            yPosition = 40
        } else {
...
