...
                                <constraints>
                                    <constraint firstAttribute="height" constant="51" id="lD9-dS-2Jo"/>
                                    <constraint firstAttribute="width" constant="165" id="lw5-A1-KCc"/>
                                    <constraint firstAttribute="width" constant="51" id="yW4-EV-yj0"/>
                                    <constraint firstAttribute="height" constant="165" id="zJT-sl-K5G"/>
                                </constraints>
                                <state key="normal" image="settings"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="lw5-A1-KCc"/>
                                        <exclude reference="zJT-sl-K5G"/>
                                    </mask>
                                </variation>
...
